using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags
{
    public const string Walk = "speedw";
    public const string Walkv = "speedwv";
    public const string PRight_Trigger = "PRight";
    public const string PRLeft_Trigger = "PLeft";
    public const string Hurt_Trigger = "hurt";
    //public const string Defense_Bool = "defense";
    //public const string Die_Bool = "die";
}

public class Axis
{
    public const string Horizontal_Axis = "Horizontal";
    public const string Vertical_Axis = "Vertical";
}

public class tags
{
    public const string Player_Tag = "Player";
    public const string Enemy_Tag = "Enemy";
    public const string Ground = "Ground";
    public const string Punch_Attack_Tag = "PuncherAttacker";
    public const string Player_Health_Bar = "PlayerHealthBar";
    public const string Enemy_Health_Bar = "EnemyHealthBar";
}